--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,7 @@
+@import '@fontsource/fira-code/index.css';
+@import '@fontsource/fira-mono/index.css';
+@import '@fontsource/fira-sans/index.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
